--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 ::-webkit-scrollbar {
     display: none;
 }
+.custom-pagination .ant-pagination-item {
+    background-color: #f0f0f0; /* Custom background color for pagination items */
+    border-radius: 19px; /* Rounded corners for pagination items */
+    margin: 0 4px;
+    
+     /* Custom margin */
+  }
+  .custom-pagination .ant-pagination {
+    display: flex;
+    justify-content: center;
+  }
+  .custom-pagination .ant-pagination-item-active {
+    background-color:  #3475F1 !important;
+  }
+  .custom-pagination .ant-pagination-item-active a {
+    color: white !important;
+  }
+
+  .custom-pagination .ant-pagination-total-text {
+    color: #3475F1 !important;
+  }
