--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,35 @@
   .custom-pagination .ant-pagination-total-text {
     color: #3475F1 !important;
   }
+
+
+
+  /* Jodit react for rich text */
+
+  /* Custom CSS to align toolbar buttons to the right */
+.custom-jodit-editor .jodit_toolbar {
+  display: flex;
+  justify-content: flex-end; /* Align buttons to the right */
+}
+
+.custom-jodit-editor .jodit_toolbar_group {
+  display: flex;
+  justify-content: flex-end; /* Ensure buttons within groups are also aligned to the right */
+}
+
+.custom-jodit-editor .jodit_toolbar_button {
+  margin-left: 0.5rem; /* Add some spacing between buttons */
+}
+.custom-jodit-editor .jodit-react-container .jodit-container .jodit-toolbar__box .jodit-toolbar-editor-collection {
+  align-items: flex-end
+}
+
+.jodit-footer {
+  display: none !important;
+}
+.custom-jodit-editor .jodit-status-bar{
+  display: none;
+}
+.custom-jodit-editor .jodit-toolbar__box:not(:empty) {
+  border-bottom: 0px;
+}
