initailiezed car rent dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
   --color-4: #6BAE46;
   --color-5: #F3FBEE;
   --color-6: #F7F7FB;
-  --color-7: #FDFDFD;
-  --color-8: #3475F1;
+  --color-7: #6A6A6A;
+  --color-8: #242424;
   font-family: "Poppins", sans-serif;
 }
 
